deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysite-deployment
  labels:
    function: app
spec:
  replicas: 3
  selector:
    matchLabels:
      function: app
  template:
    metadata:
      labels:
        function: app
    spec:
      volumes:
        - name: db
          persistentVolumeClaim:
              claimName: mysite-data
      containers:
      - name: django
        image: ghcr.io/multifrog/cis-92:milestone-6.4
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: 250m 
            memory: 512Mi
            ephemeral-storage: 10Mi
          limits:
            cpu: 250m 
            memory: 512Mi
            ephemeral-storage: 10Mi
        volumeMounts:
        - name: db
          mountPath: /data
        livenessProbe:
          httpGet:
            path: /
            port: 8000
            httpHeaders:
            - name: host
              value: localhost
