deployment/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: django-pod
  labels:
    function: app
spec:
  containers:
  - name: django-cont
    image: ghcr.io/multifrog/cis-92:milestone-6.3
    ports:
    - containerPort: 8000
    resources:
      requests:
        cpu: 250m 
        memory: 512Mi
        ephemeral-storage: 10Mi
      limits:
        cpu: 250m 
        memory: 512Mi
        ephemeral-storage: 10Mi
