deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysite-ing
  annotations: {}
spec:
  rules:
  - host: "www.josephbonanno.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mysite-svc
            port:
              number: 80
